
[project]
name = "addok"
version = "1.1.1"
description = "Search engine for address. Only address."
keywords = ["address openstreetmap geocoding"]
readme = "README.md"
authors = [
    {name = "Yohan Boniface", email = "yohan.boniface@data.gouv.fr"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "Unidecode==1.3.6",
    "editdistance==0.6.2",
    "falcon==3.1.1",
    "hashids==1.3.1",
    "hiredis==2.2.2",
    "ngram==4.0.3",
    "progressist==0.1.0",
    "python-geohash==0.8.5",
    "redis==4.5.4",
]
license = {text = "MIT"}
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/addok/addok"

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "mkdocs",
]

[tool.pdm.scripts.addok]
call = "addok.bin:main"
# Addok uses pkg_resources to look for plugins
site_packages = true

[project.entry-points.pytest11]
addok = "addok.pytest"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
